content/terraform-plugin-testing/v1.12.x/docs/plugin/testing/acceptance-tests/known-value-checks/bool.mdx
---
page_title: 'Plugin Development - Acceptance Testing: Known Values'
description: >-
    Bool Value Checks for use with Plan and State Checks.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-19T09:28:23-04:00
last_modified: 2025-03-19T09:28:23-04:00
# END AUTO GENERATED METADATA
---

# Bool Known Value Checks

The known value checks that are available for bool values are:

* [Bool](/terraform/plugin/testing/acceptance-tests/known-value-checks/bool#bool-check)
* [BoolFunc](/terraform/plugin/testing/acceptance-tests/known-value-checks/bool#boolfunc-check)

## `Bool` Check

The [Bool](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Bool) check tests that a resource attribute, or output value has an exactly matching bool value.

Example usage of [Bool](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Bool) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/plan-checks/resource) plan check.

```go
func TestExpectKnownValue_CheckPlan_Bool(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
				// Example resource containing a computed boolean attribute named "computed_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectKnownValue(
							"test_resource.one",
							tfjsonpath.New("computed_attribute"),
							knownvalue.Bool(true),
						),
					},
				},
			},
		},
	})
}
```

## `BoolFunc` Check

The [BoolFunc](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#BoolFunc) check allows defining a custom function to validate whether the bool value of a resource attribute or output satisfies specific conditions.

Example usage of [BoolFunc](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#BoolFunc) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/state-checks/resource) state check.

```go
func TestExpectKnownValue_CheckState_BoolFunc(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
				// Example resource containing a boolean attribute named "configurable_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigStateChecks: []statecheck.StateCheck{
					statecheck.ExpectKnownValue(
						"test_resource.one",
						tfjsonpath.New("configurable_attribute"),
						knownvalue.BoolFunc(func(v bool) error {
							if !v {
								return fmt.Errorf("expected true, got %t", v)
							}
							return nil
						}),
					),
				},
			},
		},
	})
}
```